# pybitvmbinding

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
scripts/: generate_witness.rs  test.rs  test_2.rs
src/: lib.rs
