[package]
name = "pybitvmbinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybitvmbinding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
openssl = { version = "0.10.66", features = ["vendored"] }
#openssl-sys = "0.9.103"
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack", features = ["interactive"] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"]}
bitvm = { git = "https://github.com/ramonamela/BitVM", branch = "stack_efficient_sha256" }
#strum = "0.26"
#strum_macros = "0.26"
hex = "0.4.3"
ripemd = "0.1.3"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
#serde = { version = "1.0.197", features = ["derive"] }
#num-bigint = "0.4.4"
#num-traits = "0.2.18"
ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-ff = "0.4.0"
ark-ec = "0.4.0"
sha2 = "0.10.8"
# tokio = { version = "1.37.0", features = ["full"] }
# esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
# serde_json = "1.0.116"
# lazy_static = "1.4.0"

[dev-dependencies]
rand_chacha = "0.3.1"
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }
ark-std = "0.4.0"

[patch.crates-io.base58check]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-io]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-units]
git = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[[bin]]
name = "test"
path = "scripts/test.rs"

[[bin]]
name = "test_2"
path = "scripts/test_2.rs"

[[bin]]
name = "generate_witness"
path = "scripts/generate_witness.rs"