[package]
name = "pybitvmbinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybitvmbinding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script", branch= "StructuredScript" }
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"]}
bitvm = { git = "https://github.com/ramonamela/BitVM", branch = "stack_efficient_sha256_rebase" }
strum = "0.26"
strum_macros = "0.26"
hex = "0.4.3"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
serde = { version = "1.0.197", features = ["derive"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
ark-bn254 = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop", features = ["curve"], default-features = false }
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
serde_json = "1.0.116"
lazy_static = "1.4.0"

[dev-dependencies]
rand_chacha = "0.3.1"
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"] }
ark-std = { version = "0.4.0", default-features = false, features = ["print-trace"] }

[patch.crates-io]
base58check = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin_hashes = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-internals = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-io = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm"}

ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-poly = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-serialize = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop" }
ark-bn254 = { git = "https://github.com/chainwayxyz/algebra/", branch = "new-ate-loop", features = ["curve"], default-features = false }

ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }

ark-relations = { git = "https://github.com/arkworks-rs/snark/" }
ark-snark = { git = "https://github.com/arkworks-rs/snark/" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }
